[package]
name = "markdown-dingus"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
comrak = "0.37.0"
concisemark = "0.4.2"
markdown = "0.3.0"
markdown-it = "0.6.1"
markdowny = "0.5.0"
mdxt = "0.7.3"
mini_markdown = "0.3.5"
pulldown-cmark = "0.13.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
